# stm32-keypad

./: CMakeLists.txt  main.c  openocd.cfg
applications/: CMakeLists.txt  applications.c  applications.cmake  applications.h  applications_exports.h
applications/debug/input_tester/: input_tester.cpp  manifest.yaml
applications/debug/msd/: manifest.yaml  msd.c  msd.h
applications/services/backlight/: backlight.c  backlight.h  manifest.yaml
applications/services/desktop/: desktop.c  manifest.yaml
applications/services/gui/: canvas.c  canvas.h  canvas_i.h  canvas_u8g2_font.c  canvas_u8g2_font.h  gui.c  gui.h  gui_i.h  manifest.yaml  menu.c  menu.h  viewport.c  viewport.h  viewport_i.h
applications/services/gui/gfx/: capslk.h  capslk_inactive.h  menuitem_bg.h  numlk.h  numlk_inactive.h  scrllk.h  scrllk_inactive.h
applications/services/hid/: hid.c  hid.h  manifest.yaml
applications/services/input/: input.c  input.h  manifest.yaml
applications/services/loader/: loader.c  loader.h  manifest.yaml
applications/services/power/: manifest.yaml  power.c  power.h
applications/services/storage/: manifest.yaml  storage.c  storage.h
applications/services/usb/: manifest.yaml  msc_disk.c  usb.c  usb.h  usb_hid.c
cmake/: arm-none-eabi-gcc.cmake  stm32f412rgx.cmake
common/: STM32F412RGTX_FLASH.ld  hal_tick.c  interrupt_handlers.c  startup.c  startup.h
core/: kp_assert.c  kp_assert.h  pubsub.c  pubsub.h  record.c  record.h  services.c  services.h
device/: config.cmake  device.h  device_backlight.c  device_buzzer.c  device_buzzer.h  device_display.c  device_display.h  device_flash.c  device_flash.h  device_gpio.h  device_init.c  device_input.c  device_input_pins.h  device_lcd_fonts.c  device_lcd_fonts.h  device_leds.c  device_leds.h  device_power.c  device_power.h  device_rand.h  device_spi.c  device_spi.h  device_uart.c  device_uart.h  device_udid.h  device_usb.c  device_usb.h
include/: FreeRTOSConfig.h  RTE_Components.h  keycodes.h  keycodes_hash.h  stm32f4xx_hal_conf.h  tusb_config.h
lib/: CMakeLists.txt
lib/CMSIS-FreeRTOS/: CMakeLists.txt
lib/CMSIS5/: ARM.CMSIS.sha1  CMakeLists.txt
lib/CMSIS5/Device/ST/STM32F4xx/Include/: system_stm32f4xx.h
lib/FatFs/: ffconf.h
lib/STM32F4xx_HAL_Driver/: CMakeLists.txt
lib/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_gpio.c
lib/UGUI/: CMakeLists.txt  ugui.c  ugui.h  ugui_button.c  ugui_checkbox.c
lib/cwalk/: CMakeLists.txt
lib/jsmn/: CMakeLists.txt  jsmn.c
lib/m-lib/: CMakeLists.txt  m-mutex.h
lib/tiny-json/: CMakeLists.txt
lib/tinyusb/: CMakeLists.txt
lib/tinyusb/class/msc/: msc_device.c  msc_host.c
lib/tinyusb/host/: hub.c
lib/tomlc99/: CMakeLists.txt
scripts/: bin_convert.py  gather_manifests.py  generate_keycodes.py  gfx_convert.py
scripts/assets/: applications.c.tpl  applications.cmake.tpl  applications_exports.h.tpl  keycodes.gperf.tpl  keycodes.h.tpl  manifest.schema.json
src/: FreeRTOSConfig.c  qspi_diskio.c  retarget.c  usb_descriptors.c
